--- a/package.json
+++ b/package.json
@@ -5,20 +5,37 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "eject": "expo eject"
+    "eject": "expo eject",
+    "test": "jest",
+    "coverage": "jest  --coverage"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.13.0",
+    "@reduxjs/toolkit": "^1.6.1",
     "expo": "~41.0.1",
+    "expo-file-system": "~11.0.2",
+    "expo-image-picker": "~10.1.4",
     "expo-status-bar": "~1.0.4",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-41.0.0.tar.gz",
-    "react-native-web": "~0.13.12"
+    "react-native-web": "~0.13.12",
+    "react-redux": "^7.2.2",
+    "redux": "^4.0.5",
+    "redux-persist": "^6.0.0",
+    "redux-saga": "^1.1.3"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
+    "@types/jest": "^26.0.20",
     "@types/react": "~16.9.35",
     "@types/react-native": "~0.63.2",
+    "@types/react-redux": "^7.1.16",
+    "jest-expo": "^40.0.2",
+    "jest-mock-extended": "^1.0.13",
+    "react-native-typescript-transformer": "^1.2.13",
+    "react-test-renderer": "^17.0.1",
+    "redux-saga-test-plan": "^4.0.1",
     "typescript": "~4.0.0"
   },
   "private": true
