--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,13 @@
 {
   "extends": "expo/tsconfig.base",
   "compilerOptions": {
-    "strict": true
+    "strict": true,
+    "baseUrl": "./",
+    "paths": {
+      "~/navigation/*": ["./src/navigation/*"],
+      "~/components/*": ["./src/components/*"],
+      "~/screens/*": ["./src/screens/*"],
+      "~/store/*": ["./src/store/*"]
+    }
   }
 }
