--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
     "react-redux": "^7.2.2",
     "redux": "^4.0.5",
     "redux-persist": "^6.0.0",
-    "redux-saga": "^1.1.3"
+    "redux-saga": "^1.1.3",
+    "tailwind-rn": "^3.0.1",
+    "tailwindcss": "^2.2.16"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
